@@ -37,7 +37,7 @@
 
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
 <!DOCTYPE prefwindow SYSTEM "chrome://firegpg/locale/prefwindow.dtd">
-<prefwindow id="optionsforefiregpg" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" title="&prefwindow.title;" onload="onLoad(this); sizeToContent();">
+<prefwindow id="optionsforefiregpg" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" title="&prefwindow.title;" onload="onLoad(this); sizeToContent(); this.innerHeight = this.innerHeight + 100;">
 
     <prefpane id="paneMisc" label="&pane1.title;" flex="1" image="chrome://firegpg/skin/opt-misc.png">
         <!-- preferences -->
